--- a/README.html
+++ b/README.html
@@ -72,9 +72,22 @@ img {
 <li><a href="http://www.census.gov/econ/isp/sampler.php?naicscode=312120&amp;naicslevel=6">Breweries NAICS 312120</a> listing of relevant employment indicators from the U.S. Census.</li>
 <li><a href="http://water.usgs.gov/owq/data.html">USGS Water Quality Data</a> for in-depth look at a key input to the beer making process.</li>
 </ul>
+<div id="north-carolina-brew" class="section level2">
+<h2>North Carolina Brew</h2>
+<p><a href="http://allaboutbeer.com/north-carolina-beer-history/">THE VEGETABLE ROOTS OF THE NORTH CAROLINA BEER BOOM</a></p>
+<blockquote>
+<p>The Stroh’s brewery, which that company had acquired from a failing Jos. Schlitz in 1982, dated from late 1969. It was then the first new brewery in North Carolina since the repeal of Prohibition in 1933. It would close in August 1999</p>
+<p>…</p>
+<p>It was in 1986, in fact, that things began to really pick up beer-wise in North Carolina. On the Fourth of July that year, the Weeping Radish brewpub opened in Manteo, a town on the Outer Banks, the islands that line much of North Carolina’s coast.</p>
+</blockquote>
+<p><a href="http://allaboutbeer.com/state-of-growth-the-rise-of-north-carolina-beer/">STATE OF GROWTH: THE RISE OF NORTH CAROLINA BEER</a> - key quote:</p>
+<blockquote>
+<p>While brewery openings waned, others sought to grow North Carolina’s beer scene in another way—by raising the state’s 6% ABV cap. Sean Lilly Wilson (who would later open Durham’s Fullsteam Brewery in 2010) and a group of beer enthusiasts did just that through Pop the Cap, a grassroots movement that—through educational events, tastings and lobbying—helped <strong>raise that cap to 15% in August of 2005.</strong></p>
+</blockquote>
+</div>
 <div id="packages-needed" class="section level2">
 <h2>Packages Needed</h2>
-<p>Various packages used are not found on CRAN, therefore the <a href="http://cran.r-project.org/web/packages/devtools/index.html">devtools package</a> needs to be installed. In particualr, the <a href="https://github.com/jtilly/cbpR">cbpR</a> package is allows for quick downloading of County Business Pattern data. Installing this package can be completed as folows:</p>
+<p>Various packages used are not found on CRAN, therefore the <a href="http://cran.r-project.org/web/packages/devtools/index.html">devtools package</a> needs to be installed.</p>
 <pre class="r"><code># install.packages(&quot;devtools&quot;)
 devtools::install_github(&quot;jtilly/cbpR&quot;)
 library(&quot;cbpR&quot;)</code></pre>
