Updated download of data.

--- a/README.html
+++ b/README.html
@@ -63,15 +63,81 @@ img {
 
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p>This repository is for ongoing projects involving analysis of breweries and other related activities. The structure of the repository is that one folder, Data, is contains all of the data that is used or to be used within this repository. Each project/analysis then has a separate folder which accesses the data folder to perform its task. Or something like that.</p>
+<p>This repository is for ongoing projects involving analysis of breweries and other related activities. The structure of the repository is that one folder, <code>0-data</code>, contains all of the data that is used or to be used within this repository. Each project/analysis then has a separate folder which accesses the data folder to perform its task.</p>
 </div>
 <div id="helpful-websites" class="section level1">
 <h1>Helpful Websites</h1>
 <ul>
 <li><a href="http://libguides.du.edu/c.php?g=90474&amp;p=581818">University of Denver</a> research guide to the U.S. beer industry.</li>
-<li><a href="http://www.census.gov/econ/isp/sampler.php?naicscode=312120&amp;naicslevel=6">Breweries NAICS 312120</a> listing of relevant employment indicators from the U.S. Census.</li>
 <li><a href="http://water.usgs.gov/owq/data.html">USGS Water Quality Data</a> for in-depth look at a key input to the beer making process.</li>
 </ul>
+<div id="naics-classifications" class="section level2">
+<h2>NAICS Classifications</h2>
+<p><a href="http://www.bls.gov/bls/naics.htm">NAICS Code Structure</a> description of how the industry structure classifications. Breweries are in:</p>
+<ul>
+<li><a href="http://www.census.gov/cgi-bin/sssd/naics/naicsrch?chart=2012">31-33 Manufacturing</a>
+<ul>
+<li><a href="http://www.census.gov/cgi-bin/sssd/naics/naicsrch?code=312&amp;search=2012%20NAICS%20Search">312 Beverage and Tobacco Product Manufacturing</a>
+<ul>
+<li>3121 Beverage Manufacturing
+<ul>
+<li>31212 Breweries
+<ul>
+<li><a href="http://www.census.gov/cgi-bin/sssd/naics/naicsrch?code=312120&amp;search=2012%20NAICS%20Search">312120 Breweries</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+<p>Description entails that breweries include: Ale brewing; Beer brewing; Beverages, beer, ale, and malt liquors, manufacturing; Breweries; Grain, brewers’ spent, manufacturing; Lager brewing; Malt liquor brewing; Near beer brewing; Nonalcoholic beer brewing; Porter brewing; and Stout brewing.</p>
+<p>Further, the bottling process is a separate NAICS classification:</p>
+<ul>
+<li><a href="http://www.census.gov/cgi-bin/sssd/naics/naicsrch?code=424810&amp;search=2012">42 Wholesale Trade</a>
+<ul>
+<li><a href="http://www.census.gov/cgi-bin/sssd/naics/naicsrch?code=424&amp;search=2012%20NAICS%20Search">424 Merchant Wholesalers, Nondurable Goods</a>
+<ul>
+<li>4248 Beer, Wine, and Distilled Alcoholic Beverage Merchant Wholesalers
+<ul>
+<li>42481 Beer and Ale Merchant Wholesalers
+<ul>
+<li><a href="http://www.census.gov/cgi-bin/sssd/naics/naicsrch?code=424810&amp;search=2012%20NAICS%20Search">424810 Beer and Ale Merchant Wholesalers</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+<p>Description entails: Alcoholic beverages (except distilled spirits, wine) merchant wholesalers; Ale merchant wholesalers; Beer merchant wholesalers; Beverages, alcoholic (except distilled spirits, wine), merchant wholesalers; Fermented malt beverages merchant wholesalers;and Porter merchant wholesalers.</p>
+</div>
+<div id="sic-classification" class="section level2">
+<h2>SIC Classification</h2>
+<p><a href="https://www.osha.gov/pls/imis/sic_manual.html">SIC Code Structure</a> description on how the SIC is structure for industries. Breweries are in:</p>
+<ul>
+<li><a href="https://www.osha.gov/pls/imis/sic_manual.display?id=4&amp;tab=division">Division D: Manufacturing</a>
+<ul>
+<li><a href="https://www.osha.gov/pls/imis/sic_manual.display?id=13&amp;tab=group">Major Group 20</a>: Food And Kindred Products
+<ul>
+<li>Industry Group 208: Beverages
+<ul>
+<li><a href="https://www.osha.gov/pls/imis/sic_manual.display?id=467&amp;tab=description">2082 Malt Beverages</a></li>
+<li>“Establishments primarily engaged in manufacturing malt beverages. Establishments primarily engaged in bottling purchased malt beverages are classified in Industry 5181. (Ale; Beer (alcoholic beverage); Breweries; Brewers’ grain; Liquors, malt; Malt extract, liquors, and syrups; Near beer; Porter (alcoholic beverage); Stout (alcoholic beverage))”</li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+<p>For the distribution, <a href="https://www.osha.gov/pls/imis/sic_manual.display?id=7&amp;tab=description">Beer and Ale SIC 5181</a> gives a description of distributors:</p>
+<ul>
+<li><a href="https://www.osha.gov/pls/imis/sic_manual.display?id=6&amp;tab=division">Division F: Wholesale Trade</a>
+<ul>
+<li><a href="https://www.osha.gov/pls/imis/sic_manual.display?id=44&amp;tab=group">Major Group 51</a>: Wholesale Trade-non-durable Goods
+<ul>
+<li>Industry Group 518: Beer, Wine, And Distilled Alcoholic Beverages
+<ul>
+<li><a href="https://www.osha.gov/pls/imis/sic_manual.display?id=7&amp;tab=description">5181 Beer and Ale</a> “Establishments primarily engaged in the wholesale distribution of beer, ale, porter, and other fermented malt beverages; Ale-wholesale; Beer and other fermented malt liquors-wholesale Porter-wholesale”</li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+</div>
 <div id="north-carolina-brew" class="section level2">
 <h2>North Carolina Brew</h2>
 <p><a href="http://allaboutbeer.com/north-carolina-beer-history/">THE VEGETABLE ROOTS OF THE NORTH CAROLINA BEER BOOM</a></p>
@@ -85,13 +151,23 @@ img {
 <p>While brewery openings waned, others sought to grow North Carolina’s beer scene in another way—by raising the state’s 6% ABV cap. Sean Lilly Wilson (who would later open Durham’s Fullsteam Brewery in 2010) and a group of beer enthusiasts did just that through Pop the Cap, a grassroots movement that—through educational events, tastings and lobbying—helped <strong>raise that cap to 15% in August of 2005.</strong></p>
 </blockquote>
 </div>
+</div>
+<div id="order-of-analysis" class="section level1">
+<h1>Order of Analysis</h1>
+<p>The files <code>0-CBP.R</code> and <code>0-ZBP.R</code> will download all of the raw zipped files related to <a href="https://www.census.gov/econ/cbp/download/">County Business Patterns</a>. For <code>0-CBP.R</code>, the downloaded files are from 1986 to 2013 with each file between 7 and 16 MBs (total of about 165 MBs). For <code>0-ZBP.R</code>, the files cover 1994 to 2013 with a file for total establishments each year as well as a separate file for industry classifications by zip code. The total files are less than 1 MB in size (total of less than 20 MBs) while the detail files are between 12 and 17 MBs (around 310 MBs).</p>
 <div id="packages-needed" class="section level2">
 <h2>Packages Needed</h2>
-<p>Various packages used are not found on CRAN, therefore the <a href="http://cran.r-project.org/web/packages/devtools/index.html">devtools package</a> needs to be installed.</p>
-<pre class="r"><code># install.packages(&quot;devtools&quot;)
-devtools::install_github(&quot;jtilly/cbpR&quot;)
-library(&quot;cbpR&quot;)</code></pre>
-<p>Further, other packages needed include: <!-- `gdata`, `ggplot2`, `maptools`, `plyr`, `raster`, `reshape2`, `rgdal`, `spdep`, `xtable`. --></p>
+<p>Current needed packages include: <code>dplyr</code>, <code>RCurl</code>, <code>readr</code>. These are accessible through CRAN and can therefore be installed with the <code>install.packages()</code> command. <!--
+`gdata`, `ggplot2`, `maptools`, `plyr`, `raster`, `reshape2`, `rgdal`, `spdep`, `xtable`. --></p>
+<!--
+Various packages used are not found on CRAN, therefore the [devtools package](http://cran.r-project.org/web/packages/devtools/index.html) needs to be installed.
+
+```R
+# install.packages("devtools")
+devtools::install_github("jtilly/cbpR")
+library("cbpR")
+```
+-->
 <!--
 THE FOLLOWING HAS BEEN COMMENTED OUT BUT IS EXTREMELY HELPFUL FOR REMEMBERING MARKDOWN COMMANDS
 
