Beer Serves America

--- a/README.html
+++ b/README.html
@@ -158,6 +158,7 @@ library("cbpR")
 <li><a href="http://water.usgs.gov/owq/data.html">USGS Water Quality Data</a> for in-depth look at a key input to the beer making process.</li>
 <li><a href="http://allaboutbeer.com/">All About Beer Magazine</a> various articles on the growth of breweries across the United States as well as descriptions of brewers choices of locations.</li>
 <li><a href="https://www.brewersassociation.org/">Brewer’s Association</a> is a trade organization that provides Insights &amp; Analysis, State Craft Beer Stats, National Beer Stats, <a href="https://www.brewersassociation.org/attachments/0001/3790/State_by_State_Data.pdf">Economic Impact</a>, Brewery Production, <a href="https://www.brewersassociation.org/statistics/number-of-breweries/">Number of Breweries</a>, and Market Segments. Their data are proprietary, although for there are <a href="http://members.brewersassociation.org/store/detail.aspx?id=INTL_BA_IN">student memberships</a> which cost $195 in order to access the data.</li>
+<li><a href="http://www.beerservesamerica.org/">Beer Serves America</a> is a biennual economic impact study commissioned by the Beer Institute and National Beer Wholesalers Association. The U.S. brewing industry is a dynamic part of our national economy, contributing billions of dollars in wages and taxes. Also affiliated with <a href="http://www.beerinstitute.org/">Beer Institute</a> which appears to have similar data to Brewer’s Association.</li>
 </ul>
 <div id="national-information" class="section level2">
 <h2>National Information</h2>
